--- a/src/main/resources/settings.yaml
+++ b/src/main/resources/settings.yaml
@@ -7,4 +7,6 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
-    ddl-auto: create
+    ddl-auto: none
+  liquibase:
+    change-log: classpath:db/liquibase-changelog.xml
