--- a/src/main/resources/settings.yaml
+++ b/src/main/resources/settings.yaml
@@ -7,6 +7,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
-    ddl-auto: none
-  liquibase:
-    change-log: classpath:db/liquibase-changelog.xml
+    hibernate:
+      ddl-auto: update
+  #liquibase:
+  #  change-log: classpath:db/liquibase-changelog.xml
